# kielio_dioxus_app

./: README.md
backend/: Cargo.toml
backend/src/: main.rs
backend/src/handlers/: mod.rs
backend/src/routes/: mod.rs
frontend/: Cargo.toml  Dioxus.toml  tailwind.css
frontend/assets/: tailwind.css
frontend/src/: app.rs  main.rs
frontend/src/components/: app_footer.rs  app_header.rs  app_layout.rs  card_collection.rs  card_view.rs  center_board.rs  deck_view.rs  discard_pile_view.rs  game_card.rs  game_launcher.rs  game_log_panel.rs  game_status_panel.rs  game_toolbar.rs  map_choices_view.rs  mod.rs  panel.rs  play_area_view.rs  player_panel.rs  protected_cards_view.rs  scoreboard_panel.rs
frontend/src/data/: games.rs  mod.rs
frontend/src/data/game_data/: beasty_bar.rs  dead_mans_draw.rs  mod.rs
frontend/src/games/: mod.rs
frontend/src/games/beasty_bar/: page.rs
frontend/src/games/dead_mans_draw/: mod.rs  page.rs  setup.rs
frontend/src/models/: game_manifest.rs  mod.rs
frontend/src/pages/: dead_mans_draw.rs  home.rs  mod.rs
frontend/src/services/: api.rs
shared/: Cargo.toml
shared/src/: dto.rs  lib.rs
shared/src/games/dead_mans_draw/: actions.rs  ai.rs  card.rs  deck.rs  engine.rs  mod.rs  player.rs  rules.rs  scoring.rs  state.rs  variant.rs
shared/src/games/dead_mans_draw/abilities/: ability.rs  anchor.rs  cannon.rs  chest.rs  context.rs  hook.rs  key.rs  kraken.rs  map.rs  mermaid.rs  mod.rs  oracle.rs  registry.rs  sword.rs
shared/src/games/dead_mans_draw/tests/: ai_tests.rs  anchor_tests.rs  cannon_tests.rs  chest_key_tests.rs  (+13 more)
