[package]
name = "frontend"
version = "0.1.0"
authors = ["Erwin Wang <wadison03@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.9", features = ["router"] }
shared = { path = "../shared" }
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.13.4", features = ["json"] }

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
